--- a/LinckTasks/LinckTasks/TaskEditionPage.xaml
+++ b/LinckTasks/LinckTasks/TaskEditionPage.xaml
@@ -3,22 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LinckTasks.TaskEditionPage"
              Title="{Binding Title}">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Deletar" Command="{Binding DeleteTaskCommand}"/>
-    </ContentPage.ToolbarItems>
 
     <StackLayout>
-        <Entry Placeholder="Título" Text="{Binding TaskTitle}" />
-        <Entry Placeholder="Descrição" Text="{Binding Description}" />
-        <Entry Placeholder="Autor" Text="{Binding Author}" />
-        <StackLayout  Orientation="Horizontal">
-            <Label Text="Data Inicio"/>
-            <DatePicker Date="{Binding Date}"/>
-        </StackLayout>
-        <StackLayout Orientation="Horizontal">
-            <Label Text="Feito"/>
-            <Switch IsToggled="{Binding done}"/>
-        </StackLayout>
+            <Label Text="Título"/>
+            <Entry Text="{Binding TaskTitle}" />
+            <Label Text="Descrição"/>
+            <Entry Text="{Binding Description}" />
+            <Label Text="Autor"/>
+            <Entry Text="{Binding Author}" />
         <StackLayout Orientation="Horizontal" HorizontalOptions="Fill">
             <Button Text="Salvar" Command="{Binding SaveTaskCommand}"/>
             <Button Text="Deletar" Command="{Binding DeleteTaskCommand}"/>
